# VolgoDon159

./: .gitignore  GenPakFiles.bat  VolgoDon159.cryproject  autoexec.cfg
Assets/: settings.json
Assets/Particles/Overlays/: cry_logo.pfx  cry_logo.pfx.cryasset
Assets/audio/sdlmixer/ace/: global.xml
Assets/audio/sdlmixer/assets/: Click1.wav.cryasset  Click2.wav.cryasset  CreakingDoor.wav.cryasset
Assets/config/: ShipTypes.xml
Assets/levels/: default.env  default.env.cryasset  default_level.level.cryasset  unittest_level.level.cryasset
Assets/levels/default_level/: default_level.level  default_level.level.bak2  filelist.xml
Assets/levels/default_level/layers/: main.lyr  (+3 more)
Assets/levels/unittest_level/: filelist.xml  terraintexture.pak  unittest_level.level  unittest_level.level.bak2
Assets/libs/UI/: GenerateGfx.bat
Assets/libs/config/: defaultprofile.xml
Assets/libs/environmentpresets/: example.env.cryasset
Assets/props/big_box/: big_box.cgf  big_box.cgf.cryasset  big_box.fbx  big_box.mtl  big_box.mtl.cryasset
Assets/props/fisher_boat/: buoy.cgf.cryasset  buoy.mtl.cryasset  buoy_rope_1.cgf.cryasset  buoy_rope_2.cgf.cryasset  fishing_boat.cgf.cryasset  fishing_boat.mtl.cryasset  fishing_boat_green.mtl.cryasset  lifebelt_rope.cgf.cryasset  lifering.cgf.cryasset  lifering.mtl.cryasset  outboard_motor.cgf.cryasset  outboard_motor.mtl.cryasset
Assets/props/volgo_don/: ship_type_507_boats_ao.dds  ship_type_507_boats_ao.dds.cryasset  ship_type_507_deck_ao.dds.cryasset  ship_type_507_detali_ao.dds  ship_type_507_detali_ao.dds.cryasset  ship_type_507_hold_ao.dds  ship_type_507_hold_ao.dds.cryasset  ship_type_507_hull_ao.dds.cryasset  ship_type_507_interior_ao.dds.cryasset  ship_type_507_interior_ao.tif  ship_type_507_lights.dds.cryasset  ship_type_507_rubka_ao.dds.cryasset  ship_type_507_rubka_detali_ao.dds.cryasset  volgo_don.cgf.cryasset  volgo_don.fbx  volgo_don.mtl  volgo_don.mtl.cryasset
Assets/screenshots/map/: 00000.tga
Assets/textures/cry_logo/: logo_diff.dds  logo_diff.dds.cryasset  logo_diff.tif
Assets/textures/volgo_don/: ship_type_507_boats_ao.dds.cryasset  ship_type_507_deck_ao.dds  ship_type_507_deck_ao.dds.cryasset  ship_type_507_detali_ao.dds.cryasset  ship_type_507_detali_ao.tif  ship_type_507_hold_ao.dds.cryasset  ship_type_507_hull_ao.dds  ship_type_507_hull_ao.dds.cryasset  ship_type_507_interior_ao.dds  ship_type_507_interior_ao.dds.cryasset  ship_type_507_lights.dds.cryasset  ship_type_507_lights.hdr  ship_type_507_lights.tif  ship_type_507_rubka_ao.dds.cryasset  ship_type_507_rubka_detali_ao.dds  ship_type_507_rubka_detali_ao.dds.cryasset  volgo_don.mtl  volgo_don.mtl.cryasset
Code/: .editorconfig  CMakeLists.txt  GamePlugin.cpp  GamePlugin.h
Code/Calculations/: MovementCalculator.cpp  MovementCalculator.h
Code/Common/: ConfigLoader.cpp  ConfigLoader.h  CryCommon.h  NavigationTypes.cpp  NavigationTypes.h
Code/Common/StubFeatures/: MemoryWriter.h  MemoryWriterImpl.h  ParamTraits.h  ParamTraitsImpl.h
Code/Components/: Sample.rar  ShipMechanics.rar  ShipType.txt
Code/Components/AutoPilot/: AutoPilotShip.cpp  AutoPilotShip.h  AutoPilotShipSpawnPoint.cpp  AutoPilotShipSpawnPoint.h
Code/Components/Player/: Player.cpp  Player.h  SpawnPoint.cpp  SpawnPoint.h
Code/Components/ShipMechanics/: ShipMechanicsComponent.cpp  ShipMechanicsComponent.h
Code/GameModules/: GameManager.cpp  GameManager.h  GameSettings.cpp  GameSettings.h  GameSound.cpp  GameSound.h  GameState.cpp  GameState.h
Code/UnitTests/: CMakeLists.txt  StdAfx.h  UnitTestPlugin.cpp  UnitTestPlugin.h  UnitTests.cryproject
Code/UnitTests/StubCryTest/: ExcelExport.cpp  Log.cpp  PluginTestSystem.cpp
Code/UnitTests/StubUberFiles/: Common_uber.cpp  GameModules_uber.cpp  MovementCalculator_uber.cpp
Code/UnitTests/TestCommon/: Main.txt  Printer.cpp  common.h
Code/UnitTests/TestComponents/: TestGridComponent.cpp  TestGridComponent.h  TestTraceComponent.cpp  TestTraceComponent.h
Code/UnitTests/TestComponents/UnitTestPlayer/: UnitTestPlayer.cpp  UnitTestPlayer.h
Code/UnitTests/Tests/: CalculationUnitTest.cpp  GameStateUnitTest.cpp  ValidationUnitTest.cpp
Code/UserInterface/: MainMenu.cpp  MainMenu.h  ShipInterface.cpp  ShipInterface.h
Code/user/: .editorconfig
Presentation/: StateMachine.puml  StateMachineClasses.puml  VolgoDon159.pptx
doc/: _auto_pilot_ship_8h_source.html  _auto_pilot_ship_spawn_point_8h_source.html  _config_loader_8h_source.html  _excel_export_8h_source.html  _game_manager_8h_source.html  _game_plugin_8h_source.html  _game_settings_8h_source.html  _game_sound_8h_source.html  _game_state_8h_source.html  _log_8h_source.html  _main_menu_8h_source.html  _movement_calculator_8h_source.html  _navigation_types_8h_source.html  _param_traits_8h_source.html  _param_traits_impl_8h_source.html  _player_8h_source.html  _plugin_test_system_8h_source.html  _ship_interface_8h_source.html  _ship_mechanics_component_8h_source.html  _ship_user_interface_8h_source.html  _spawn_point_8h_source.html  _std_afx_8h_source.html  _test_grid_component_8h_source.html  _test_trace_component_8h_source.html  _unit_test_8h_source.html  _unit_test_excel_reporter_8h_source.html  _unit_test_player_8h_source.html  _unit_test_plugin_8h_source.html  _unit_tests_2_std_afx_8h_source.html  annotated.html  annotated_dup.js  chrono_8h_source.html  class_c_excel_export_base-members.html  class_c_excel_export_base.html  class_c_excel_export_base.js  class_c_game_plugin-members.html  class_c_game_plugin.html  class_c_game_plugin.js  class_c_log-members.html  class_c_log.html  (+783 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+36 more)
doxygen/: Doxyfile  main.md
(+229 files in other folders)
